fix: footer align

--- a/src/assets/scss/_footer.scss
+++ b/src/assets/scss/_footer.scss
@@ -58,8 +58,12 @@
   font-size:       20px;
   max-width:       1150px;
   margin:          0 auto;
+  flex-direction:  column;
+  li {
+    margin-bottom: 16px;
+  }
   a {
-    color: $mainColor;
+    color: $black;
     &:active {
       text-decoration: underline;
       opacity:         .7;
@@ -91,12 +95,6 @@
     p {
       font-size:     16px;
       margin-bottom: 40px;
-    }
-  }
-  .footer-menu {
-    flex-direction: column;
-    li {
-      margin-bottom: 20px;
     }
   }
 }
